--- a/pev/polls/templates/polls/poll_detail.html
+++ b/pev/polls/templates/polls/poll_detail.html
@@ -17,7 +17,7 @@
     {% endif %}
     <hr>
     <h2 class="mt-3 mb-3">{{ poll }}</h2>
-    <form action="{% url 'polls:vote' poll.id %}" method="POST">
+    <form action="" method="POST">
         {% csrf_token %}
         {% for choice in poll.choice_set.all %}
         <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
@@ -25,7 +25,7 @@
         <br>
         {% endfor %}
         <input type="submit" value="Vote" class="btn btn-primary mt-3">
-        <a class="btn btn-warning mt-3" href="{% url 'polls:list' %}" role="button">Cancel</a>
+        <a class="btn btn-warning mt-3" href="{% url 'surveys:survey_detail' poll.survey.pk %}" role="button">Cancel</a>
     </form>
 
 </div>
