--- a/pev/surveys/templates/surveys/detail.html
+++ b/pev/surveys/templates/surveys/detail.html
@@ -9,15 +9,14 @@
             
             <h2>List of Polls in this Survey</h2>
             <ul class="list-group">
-                {% for poll in polls %}
-                <li class="list-group-item">
-                    <a href="{% url 'polls:detail' poll.pk %}">{{ poll.poll_text }}</a>
-                    <a class="btn btn-primary float-right mt-5" href="{% url 'polls:edit_poll' poll.pk %}" role="button">Edit Poll</a>
-                </li>
-                {% endfor %}
+                {% include 'polls/partials/detail_form.html' %}
             </ul>
             
+            {% if request.user == survey.owner %}
+            {% if survey.active %}
             <a class="btn btn-primary mt-3" href="{% url 'polls:add_poll' survey.pk %}" role="button">Create Poll</a>
+            {% endif %}
+            {% endif %}
             <a class="btn btn-warning mt-3" href="{% url 'surveys:survey_index' %}" role="button">Back to Survey Index</a>
         </div>
     </div>
