--- a/pev/polls/templates/polls/partials/choice_form.html
+++ b/pev/polls/templates/polls/partials/choice_form.html
@@ -1,6 +1,6 @@
 <!-- choice_form.html -->
 
-<form>
+<form  hx-post="{% url 'polls:protocol_choice' poll.id %}">
    {% csrf_token %}
    <div class="form-row align-items-center">
       <div class="col-6 col-md-4">
@@ -11,6 +11,6 @@
       <div class="col-4 col-md-6">
          {{ choice_form.choice_text }}
       </div>
-
+   <button type="submit" class="btn btn-primary me-2 align-self-end" >Submit</button>
    </div>
 </form>
