--- a/pev/polls/templates/polls/partials/detail_form.html
+++ b/pev/polls/templates/polls/partials/detail_form.html
@@ -1,3 +1,4 @@
+<!--detail_form.html-->
 {% for poll in polls %}
 <li class="list-group-item">
     <a href="{% url 'polls:detail' poll.pk %}">{{ poll.poll_text }}</a>
