--- a/pev/polls/templates/polls/poll_detail.html
+++ b/pev/polls/templates/polls/poll_detail.html
@@ -1,13 +1,11 @@
-{% extends 'base.html' %}
-
-
-{% block content %}
+{% extends 'base.html' %} {% block content %}
 <div class="container">
     <h1>Polls details page</h1>
     {% if messages %}
     <div class="messages">
         {% for message in messages %}
-        <div {% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}
+        <div {% if message.tags %} class="{{ message.tags }}" {% endif %}>
+            {{ message }}
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
@@ -15,19 +13,41 @@
         {% endfor %}
     </div>
     {% endif %}
-    <hr>
-    <h2 class="mt-3 mb-3">{{ poll }}</h2>
-    <form action="" method="POST">
-        {% csrf_token %}
-        {% for choice in poll.choice_set.all %}
-        <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
-        <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label>
-        <br>
-        {% endfor %}
-        <input type="submit" value="Vote" class="btn btn-primary mt-3">
-        <a class="btn btn-warning mt-3" href="{% url 'surveys:survey_detail' poll.survey.pk %}" role="button">Cancel</a>
-    </form>
+     <hr>
 
+
+
+
+
+
+
+<div class="pagination">
+    <span class="step-links">
+        {% if polls_page.has_previous %}
+        <a href="?page=1">&laquo; first</a>
+        <a href="?page={{ polls_page.previous_page_number }}">previous</a>
+        {% endif %}
+
+        <span class="current">
+            Page {{ polls_page.number }} of {{ polls_page.paginator.num_pages }}.
+        </span>
+
+        {% if polls_page.has_next %}
+        <a href="?page={{ polls_page.next_page_number }}">next</a>
+        <a href="?page={{ polls_page.paginator.num_pages }}">last &raquo;</a>
+        {% endif %}
+    </span>
 </div>
 
+
+
+
+
+
+
+    <h2 class="mt-3 mb-3">{{ poll }}</h2>
+    <div id="form-choices">
+        {% include 'polls/partials/detail_choice_form.html' %}
+    </div>
+</div>
 {% endblock content %}
