--- a/pev/polls/templates/polls/poll_vote.html
+++ b/pev/polls/templates/polls/poll_vote.html
@@ -19,7 +19,10 @@
     </div>
 
  <div class="container-fluid">
-    <a class="btn btn-warning mt-3 align-self-end" href="{% url 'surveys:survey_detail' poll.survey.pk %}" role="button">Back</a>
+    <button type="submit" 
+            class="btn btn-primary mt-3 align-self-end" 
+            id="submit-vote">Vote</button>
+        <a class="btn btn-warning mt-3 align-self-end" href="{% url 'surveys:survey_detail' poll.survey.pk %}" role="button">Cancel</a>
     </div>
 </div>
 {% endblock content %}
