--- a/pev/polls/templates/polls/poll_detail.html
+++ b/pev/polls/templates/polls/poll_detail.html
@@ -1,17 +1,8 @@
+<!--TODO: display the picked choice of the user on the poll passed -->
 {% extends 'base.html' %} {% block content %}
 <div class="container">
     <h1>{{ poll.poll_text }} </h1>
      <hr>
-<div class="row">
-  <div class="col-4 ">
-    <p class="text-middle me-2"> Page {{ polls_page.number }} </p>
-  </div>
-  <div class="col-4">
-    <button type="button" hx-get="{% url 'polls:protocol_vote' poll.pk %}" class="btn btn-outline-light me-2" id="next"><</button>
-    <button type="button" action="get" class="btn btn-outline-danger me-2" id="prev">></button>
-  </div>
-</div>
-
 <hr>
 <br>
     <div id="form-choices">
