--- a/pev/templates/home.html
+++ b/pev/templates/home.html
@@ -12,6 +12,7 @@
             <div id="home-content">
                 <h1>People Electric Vote</h1>
                 <h3>Control your future, stop waiting!</h3>
+                <a href="{% url 'surveys:survey_index' %}"><button class="btn btn-primary me-2">Get Started</button></a>
                 <hr>
             </div>
         </div>
