--- a/pev/polls/templates/polls/poll_vote.html
+++ b/pev/polls/templates/polls/poll_vote.html
@@ -7,8 +7,8 @@
     <p class="text-middle me-2"> Page {{ polls_page.number }} </p>
   </div>
   <div class="col-4">
-    <button type="button" hx-get="{% url 'polls:protocol_vote' poll.pk %}" class="btn btn-outline-light me-2" id="next"><</button>
-    <button type="button" action="get" class="btn btn-outline-danger me-2" id="prev">></button>
+   <button type="button" hx-get="{% url 'polls:protocol_vote' poll.pk %}" class="btn btn-warning me-2" id="next"><</button>
+    <button type="button" action="get" class="btn btn-secondary me-2" id="prev">></button>
   </div>
 </div>
 
