--- a/pev/polls/templates/polls/partials/detail_choice.html
+++ b/pev/polls/templates/polls/partials/detail_choice.html
@@ -1,20 +1,15 @@
-<form hx-post="{% url 'polls:protocol_vote' poll.id %}" hx-trigger="click from:#submit-vote" hx-target="#form-choices">
-    <div class="container-fluid">
-        {% csrf_token %} 
-        {% for choice in poll.choice_set.all %}
-        <ul class="list-group">
-            <li class="list-group-items" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
-                <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label> 
-
-                {% if request.user == choice.poll.survey.owner %}
+<div class="container-fluid">
+    {% for choice in poll.choice_set.all %}
+    <ul class="list-group">
+        <li class="list-group-item list-group-item-action" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
+            <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label> 
+            {% if request.user == choice.poll.survey.owner %}
                 {% if choice.poll.survey.active %}
                 <a href="{% url 'polls:edit_choice' choice.id %}" class="mr-3" hx-swap="outerHTML"  hx-target="choice{{ forloop.counter }}" data-toggle="tooltip" data-placement="top" title="Edit Choice"><i class="fas fa-pencil-alt float-right btn btn-primary btn-sm mr-1"></i></a>
                 <a href="{% url 'polls:delete_choice' choice.id %}" class="mr-3" data-toggle="tooltip" data-placement="top" title="Delete Choice"><i class="fas fa-trash-alt float-right btn btn-danger btn-sm mr-1"></i></a>
                 {% endif %}
-                {% endif %} 
-            </li>
-        </ul>
-        <br />
-        {% endfor %}
-    </div>
-</form>
+            {% endif %} 
+        </li>
+    </ul>
+    {% endfor %}
+</div>
