--- a/pev/static/css/home_style.css
+++ b/pev/static/css/home_style.css
@@ -5,6 +5,8 @@ html, body {
     color: white;
   }
 html{
+    background-image: url("/img/background.png");
+    background-color: royalblue;
     background-size: cover;
 }
 body {
