--- a/pev/polls/templates/polls/partials/choice_form.html
+++ b/pev/polls/templates/polls/partials/choice_form.html
@@ -11,10 +11,8 @@
        <div class="col-10 col-md-4">
            {{ choice_form.choice_text }}
        </div>
-       <div class="col-3 self-align-end">
-           <button type="button" class="btn btn-danger"
+           <button type="button" class="btn btn-danger self-align-end"
            hx-on="click: this.closest('form').remove()">X</button>
-       </div>
       </div>
 
    </div>
