--- a/pev/polls/templates/polls/partials/detail_choice.html
+++ b/pev/polls/templates/polls/partials/detail_choice.html
@@ -6,7 +6,7 @@
             {% if request.user == choice.poll.survey.owner %}
                 {% if choice.poll.survey.active %}
                 <a href="{% url 'polls:edit_choice' choice.id %}" class="mr-3" hx-swap="outerHTML"  hx-target="choice{{ forloop.counter }}" data-toggle="tooltip" data-placement="top" title="Edit Choice"><i class="fas fa-pencil-alt float-right btn btn-primary btn-sm mr-1"></i></a>
-                <a href="{% url 'polls:delete_choice' choice.id %}" class="mr-3" data-toggle="tooltip" data-placement="top" title="Delete Choice"><i class="fas fa-trash-alt float-right btn btn-danger btn-sm mr-1"></i></a>
+                <a href="{% url 'polls:delete_choice' poll_id=choice.poll.pk choice_id=choice.id %}" class="mr-3" data-toggle="tooltip" data-placement="top" title="Delete Choice"><i class="fas fa-trash-alt float-right btn btn-danger btn-sm mr-1"></i></a>
                 {% endif %}
             {% endif %} 
         </li>
