--- a/pev/polls/templates/polls/poll_vote.html
+++ b/pev/polls/templates/polls/poll_vote.html
@@ -13,7 +13,9 @@
     </div>
     <div class="container-fluid">
         {% if selected_choice_id is None%}
-            <button type="submit" class="btn btn-primary mt-3 align-self-end" id="submit-vote">Vote</button>
+            <button type="submit" class="btn btn-success mt-3 align-self-end" id="submit-vote">Vote</button>
+        {% else %}
+            <a class="btn btn-secondary mt-3 align-self-end" href="{% url 'polls:edit_vote' vote.pk %}" role="button">Reset Vote</a>
         {% endif %}
         <a class="btn btn-warning mt-3 align-self-end" href="{% url 'surveys:survey_detail' poll.survey.pk %}" role="button">Cancel</a>
     </div>
