--- a/pev/templates/base.html
+++ b/pev/templates/base.html
@@ -34,7 +34,8 @@
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.1.0/chart.min.js" integrity="sha512-xemBn324HMu/8XzlHvoVKvDdTmVLCZelF4mlovpiLO8wwfz6zpMysv2f8WfqUWX/g2IuAGErdqytAnYgN70uNw==" 
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
 
 </html>
