replcae the poll_text into text

--- a/pev/polls/templates/polls/delete_poll.html
+++ b/pev/polls/templates/polls/delete_poll.html
@@ -6,7 +6,7 @@
 <div class="container-fluid">
 <strong class="text-danger"> Delete this poll? </strong> 
 <br>
-<h2>Poll Title: {{ poll.poll_text }}</h2>
+<h2>Poll Title: {{ poll.text }}</h2>
 <hr>
 <h4>Choices:</h4>
 {% include 'polls/partials/list_choice.html' %}
