--- a/pev/polls/templates/polls/partials/poll_detail.html
+++ b/pev/polls/templates/polls/partials/poll_detail.html
@@ -1,7 +1,7 @@
 {% for poll in polls %}
 <ul class="list-group">
     <li class="list-group-item">
-        <a href="{% url 'polls:add_vote' poll.pk %}">{{ poll.poll_text }}</a>
+        <a href="{% url 'polls:add_vote' poll.pk %}">{{ poll.text }}</a>
  
     {% if request.user == poll.survey.owner %}
     {% if poll.survey.active %}
