--- a/pev/polls/templates/polls/poll_detail.html
+++ b/pev/polls/templates/polls/poll_detail.html
@@ -1,7 +1,7 @@
 <!--TODO: display the picked choice of the user on the poll passed -->
 {% extends 'base.html' %} {% block content %}
 <div class="container">
-    <h1>{{ poll.poll_text }} </h1>
+    <h1>{{ poll.text }} </h1>
      <hr>
 <hr>
 <br>
