--- a/pev/polls/templates/polls/add_choice.html
+++ b/pev/polls/templates/polls/add_choice.html
@@ -2,7 +2,7 @@
 {% extends 'base.html' %} {% block content %}
 
 <div class="col">
-    <legend>{{ poll.poll_text }}</legend>
+    <legend>{{ poll.text }}</legend>
     <div class="form-row align-items-center col-md-6 offset-md-3">
         <strong class="mr-3"> Choices: </strong>
  
