--- a/pev/polls/templates/polls/poll_vote.html
+++ b/pev/polls/templates/polls/poll_vote.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% block content %}
 <div class="container">
-    <h1>{{ poll.poll_text }}</h1>
+    <h1>{{ poll.text }}</h1>
     <hr />
         {% include 'polls/partials/dropdown_poll.html' %}
     <hr />
