--- a/pev/surveys/templates/surveys/end.html
+++ b/pev/surveys/templates/surveys/end.html
@@ -7,7 +7,7 @@
     <h2> {{ survey.title }} </h2>
     <p> {{ survey.description }} </p>
     {% for poll in polls%}
-    <p> {{ poll.poll_text }} </p>
+    <p> {{ poll.text }} </p>
     <li> {{ poll.choice_set.get_vote_count }} </li>
     {% endfor %}
     </div>
