--- a/pev/polls/templates/polls/delete_choice.html
+++ b/pev/polls/templates/polls/delete_choice.html
@@ -4,13 +4,13 @@
 
 
 <div class="container-fluid">
-<strong class="text-danger"> Delete this poll? </strong> 
+<strong class="text-danger"> Delete this choice? </strong> 
 <br>
 <hr>
 <h4>Choices:</h4>
 <div class="container-fluid">
     <ul class="list-group list-group-action">
-        <li class="list-group-items list-group-flush">{{ choice.choice_text }}</li>
+        <li class="list-group-items list-group-flush">{{ choice.text }}</li>
     </ul>
 </div>
 <hr>
