--- a/pev/polls/templates/polls/partials/list_choice.html
+++ b/pev/polls/templates/polls/partials/list_choice.html
@@ -1,7 +1,7 @@
 {% for choice in poll.choice_set.all %}
     <ul class="list-group list-group-flush">
         <li class="list-group-item list-group-item-action">
-             {{ choice.choice_text }}  
+             {{ choice.text }}  
         </li>
     </ul>
 {% endfor %}
