--- a/pev/polls/templates/polls/poll_vote.html
+++ b/pev/polls/templates/polls/poll_vote.html
@@ -1,4 +1,11 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %}
+
+{% load static %}
+{% block custom_css %}
+<link rel="stylesheet" href="{% static 'polls/css/choice.css' %}">
+{% endblock custom_css %}
+
+{% block content %}
 <div class="container">
     <h1>{{ poll.text }}</h1>
     <hr />
@@ -12,9 +19,9 @@
     {% include 'polls/partials/radio_choice.html' %}
     </div>
     <div class="container-fluid">
-        {% if selected_choice_id is None%}
+        {% if selected_choice_id is None and is_active %}
             <button type="submit" class="btn btn-success mt-3 align-self-end" id="submit-vote">Vote</button>
-        {% else %}
+        {% elif is_active %}
             <a class="btn btn-secondary mt-3 align-self-end" href="{% url 'polls:edit_vote' vote.pk %}" role="button">Reset Vote</a>
         {% endif %}
         <a class="btn btn-warning mt-3 align-self-end" href="{% url 'surveys:survey_detail' poll.survey.pk %}" role="button">Cancel</a>
