--- a/pev/polls/templates/polls/partials/dropdown_poll.html
+++ b/pev/polls/templates/polls/partials/dropdown_poll.html
@@ -1,6 +1,5 @@
-
-    <div class="row">
-        <div class="dropdown-show">
+<div class="row">
+        <div class="dropdown-show float-left">
             <div class="dropdown ">
                 <button class="btn btn-secondary dropdown-toggle ml-4" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Poll {{ current_poll_number }}
@@ -9,7 +8,7 @@
                 {% for poll in polls %}
                     <a class="dropdown-item" href="{% url 'polls:add_vote' poll.pk %}">{{ poll.text }}</a>
                 {% endfor %}
-            </div> 
+                </div> 
             </div>
         </div>
-    </div>
+</div>
