--- a/pev/surveys/templates/surveys/index.html
+++ b/pev/surveys/templates/surveys/index.html
@@ -1,35 +1,63 @@
 {% extends 'base.html' %}
+{% load static %}
+
+{% load static %}
+{% block custom_css %}
+<link rel="stylesheet" href="{% static 'surveys/css/table.css' %}">
+{% endblock custom_css %}
 
 {% block content %}
 <div class="container">
-    <div class="row">
-        <div class="col-md-8 offset-sm-2">
-            <h1 class="text-center mb-5">Welcome to Personal Evaluation System!</h1>
+         <h1 class="text-center mb-5">Welcome to Personal Evaluation System!</h1>
+
+         <a class="btn btn-{% if 'title' in request.GET %}warning{% else %}primary{% endif %} mb-3" href="?title=True"
+            role="button"><i class="fas fa-sort-alpha-down"></i>Title</a>
+
+         <a class="btn btn-{% if 'created_at' in request.GET %}warning{% else %}primary{% endif %} mb-3" href="?created_at=True"
+            role="button"><i class="far fa-clock"></i> Created At</a>
+
+         <a class="btn btn-primary mb-3 float-right" href="{% url 'surveys:survey_create' %}" role="button">Add <i class="fas fa-plus"></i></a>
+      
+<form class="form-inline my-2 my-lg-0" method="get">
+    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="search_term">
+    <button class="btn btn-primary my-sm-0" type="submit">Search</button>
+</form>         
 
 
-            <a class="btn btn-{% if 'title' in request.GET %}warning{% else %}primary{% endif %} mb-3" href="?title=True"
-                role="button"><i class="fas fa-sort-alpha-down"></i>
-                Title</a>
-            <a class="btn btn-{% if 'created_at' in request.GET %}warning{% else %}primary{% endif %} mb-3" href="?created_at=True"
-                role="button"><i class="far fa-clock"></i> Created At</a>
-
-            <a class="btn btn-primary mb-3 float-right" href="{% url 'surveys:survey_create' %}" role="button">Add <i class="fas fa-plus"></i></a>
-
-            <form class="form-inline">
-                <div class="form-group mr-sm-2 mb-2">
-                    <input type="search" class="form-control" name="search" placeholder="Search" value={{ search_term }}>
-                </div>
-                <button type="submit" class="btn btn-primary mb-2"><i class="fas fa-search"></i></button>
-            </form>
-
-
-            <ul class="list-group">
-                {% for survey in surveys %}
-                <li class="list-group-item"><a href="{% url 'surveys:survey_detail' survey.id %}">{{ survey.title|truncatewords:5 }}
-                        {% if not survey.active%}
-                        <i class="fas fa-check-circle ml-2"></i>
+         <br>
+         <hr>
+         <div class="table-responsive table-bordered table-hover table-striped">
+            <table class="table">
+               <thead>
+                  <tr>
+                     <th>Title</th>
+                     <th>Date</th>
+                     <th>Questions</th>
+                     <th>Active</th>
+                  </tr>
+               </thead>
+               <tbody>
+                  {% for survey in surveys %}
+                  <tr>
+                     <td>
+                        {% if not survey.owner == request.user %}
+                           <a href="{% url 'polls:start_vote' survey.id %}">{{ survey.title|truncatewords:5 }}</a>
+                        {% else %}
+                           <a href="{% url 'surveys:survey_detail' survey.id %}">{{ survey.title|truncatewords:5 }}</a>
                         {% endif %}
-                    </a>
+                     </td>
+                     <td>{{ survey.created_at | date:"Y-m-d H:i:s"  }}</td>
+                     <td>{{ survey.poll_set.count }}</td>
+                     <td>
+                        {% if not survey.active%}
+                            <i class="fas fa-window-close" style="color:red"></i>
+                        {% endif %}
+
+                        {% if survey.active %}
+                            <i class="fas fa-check-square" style="color:green"></i>
+                        {% endif %}
+                    </td>
+                     <td>
                     {% if request.user == survey.owner %}
                     {% if survey.active %}
                     <a href="{% url 'surveys:survey_end' survey.id %}" data-toggle="tooltip" data-placement="top" title="End Survey"
@@ -40,28 +68,15 @@
                      <a href="{% url 'surveys:survey_delete' survey.id %}" class="mr-3" data-toggle="tooltip" data-placement="top"
                     title="Delete Survey" onclick="return confirm('Delete this survey?')"><i class="fas fa-trash-alt float-right btn btn-danger btn-sm mr-1"></i></a>
                     {% endif %}
-                </li>
+                    </td>
+                  </tr>
+                  {% endfor %}
+               </tbody>
+            </table>
+         </div>
 
-                {% endfor %}
-            </ul>
-            {% if surveys.paginator.num_pages > 1 %}
-            <nav class="mt-3">
-                <ul class="pagination">
-                    {% if surveys.has_previous %}
-                    <li class="page-item"><a class="page-link" href="?page=1&{{ params }}">First</a></li>
-                    <li class="page-item"><a class="page-link" href="?page={{ surveys.previous_page_number }}&{{ params }}">Previous</a></li>
-                    {% endif %}
-
-                    <li class="page-item active"><a class="page-link" href="">{{ surveys.number }}</a></li>
-
-                    {% if surveys.has_next %}
-                    <li class="page-item"><a class="page-link" href="?page={{ surveys.next_page_number }}&{{ params }}">Next</a></li>
-                    <li class="page-item"><a class="page-link" href="?page={{ surveys.paginator.num_pages }}&{{ params }}">Last</a></li>
-                    {% endif %}
-                </ul>
-            </nav>
-            {% endif %}
-        </div>
-    </div>
+         <br>
+         <hr>
+         {% include 'partials/paginator.html' %}
 </div>
-{% endblock content %}
+{% endblock %}
