--- a/pev/polls/templates/polls/partials/dropdown_poll.html
+++ b/pev/polls/templates/polls/partials/dropdown_poll.html
@@ -7,7 +7,7 @@
                  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                  <h6 class="dropdown-header"> Polls </h6>
                 {% for poll in polls %}
-                    <a class="dropdown-item" href="{% url 'polls:add_vote' poll.pk %}">{{ poll.text }}</a>
+                    <a class="dropdown-item" href="{% url 'polls:page_view' poll.pk %}">{{ poll.text }}</a>
                 {% endfor %}
                 </div> 
             </div>
