--- a/pev/polls/templates/polls/partials/navigation_poll.html
+++ b/pev/polls/templates/polls/partials/navigation_poll.html
@@ -2,7 +2,7 @@
    <ul class="pagination">
       <li class="page-item">
          {% if previous_poll_id is not None %}
-         <a class="page-link" href="{% url 'polls:add_vote' previous_poll_id %}">
+         <a class="page-link" href="{% url 'polls:page_view' previous_poll_id %}">
          &lt;
          </a>
          {% else %}
@@ -13,7 +13,7 @@
       </li>
       <li class="page-item">
          {% if next_poll_id is not None %}
-         <a class="page-link" href="{% url 'polls:add_vote' next_poll_id %}">
+         <a class="page-link" href="{% url 'polls:page_view' next_poll_id %}">
           &gt;
          </a>
          {% else %}
